// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canonical Most Read Page A11y I can see the skip to content link 1`] = `"Bỏ qua để xem nội dung"`;

exports[`Canonical Most Read Page Analytics ATI 1`] = `"<img height=\\"1px\\" width=\\"1px\\" alt=\\"\\" style=\\"position:absolute\\" src=\\"https://logws1363.ati-host.net?s=598343&amp;s2=97&amp;p=vietnamese.popular.read.page&amp;x2=[responsive]&amp;x3=[news-vietnamese]&amp;x4=[vi]&amp;x7=[list-datadriven]&amp;x8=[simorgh-nojs]&amp;x9=[Đọc+nhiều+nhất+-+BBC+News+Tiếng+Việt]&amp;x11=[2019-11-06T16:54:00Z]&amp;x12=[2100-11-06T17:09:00Z]\\"/>"`;

exports[`Canonical Most Read Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/vietnamese"`;

exports[`Canonical Most Read Page Footer I can see the footer copyright and external linking text 1`] = `"© 2020 BBC. BBC không chịu trách nhiệm nội dung các trang ngoài. Tìm hiểu cách chúng tôi tiếp cận việc dẫn tới trang ngoài"`;

exports[`Canonical Most Read Page Footer Link should match text and url 1`] = `
Object {
  "text": "BBC News, Tiếng Việt",
  "url": "/vietnamese",
}
`;

exports[`Canonical Most Read Page Footer Link should match text and url 2`] = `
Object {
  "text": "Tại sao bạn có thể tin tưởng BBC News",
  "url": "https://www.bbc.com/vietnamese/institutional-49283563",
}
`;

exports[`Canonical Most Read Page Footer Link should match text and url 3`] = `
Object {
  "text": "Điều khoản sử dụng",
  "url": "https://www.bbc.com/vietnamese/institutional-37622991",
}
`;

exports[`Canonical Most Read Page Footer Link should match text and url 4`] = `
Object {
  "text": "Về BBC",
  "url": "https://www.bbc.com/vietnamese/institutional-37623840",
}
`;

exports[`Canonical Most Read Page Footer Link should match text and url 5`] = `
Object {
  "text": "Chính sách riêng tư",
  "url": "https://www.bbc.com/vietnamese/institutional-37623841",
}
`;

exports[`Canonical Most Read Page Footer Link should match text and url 6`] = `
Object {
  "text": "Cookie",
  "url": "https://www.bbc.co.uk/privacy/cookies/managing/cookie-settings.html",
}
`;

exports[`Canonical Most Read Page Footer Link should match text and url 7`] = `
Object {
  "text": "Liên hệ BBC",
  "url": "https://www.bbc.com/vietnamese/institutional-37623842",
}
`;

exports[`Canonical Most Read Page Footer Link should match text and url 8`] = `
Object {
  "text": "AdChoices / Do Not Sell My Info",
  "url": "https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/",
}
`;

exports[`Canonical Most Read Page Footer Link should match text and url 9`] = `
Object {
  "text": "Tìm hiểu cách chúng tôi tiếp cận việc dẫn tới trang ngoài",
  "url": "https://www.bbc.co.uk/help/web/links/",
}
`;

exports[`Canonical Most Read Page Header I can see the branding 1`] = `"BBC News, Tiếng Việt"`;

exports[`Canonical Most Read Page Header Navigation link should match text and url 1`] = `
Object {
  "text": "Tin chính",
  "url": "/vietnamese",
}
`;

exports[`Canonical Most Read Page Header Navigation link should match text and url 2`] = `
Object {
  "text": "Việt Nam",
  "url": "/vietnamese/vietnam",
}
`;

exports[`Canonical Most Read Page Header Navigation link should match text and url 3`] = `
Object {
  "text": "Thế giới",
  "url": "/vietnamese/world",
}
`;

exports[`Canonical Most Read Page Header Navigation link should match text and url 4`] = `
Object {
  "text": "Diễn đàn",
  "url": "/vietnamese/forum",
}
`;

exports[`Canonical Most Read Page Header Navigation link should match text and url 5`] = `
Object {
  "text": "Kinh tế",
  "url": "/vietnamese/business",
}
`;

exports[`Canonical Most Read Page Header Navigation link should match text and url 6`] = `
Object {
  "text": "Nhịp sống mới",
  "url": "/vietnamese/magazine",
}
`;

exports[`Canonical Most Read Page Header Navigation link should match text and url 7`] = `
Object {
  "text": "Thể thao",
  "url": "/vietnamese/sport",
}
`;

exports[`Canonical Most Read Page Header Navigation link should match text and url 8`] = `
Object {
  "text": "Học tiếng Anh",
  "url": "/vietnamese/english",
}
`;

exports[`Canonical Most Read Page Header Navigation link should match text and url 9`] = `
Object {
  "text": "Video",
  "url": "/vietnamese/media/video",
}
`;

exports[`Canonical Most Read Page I can see the headline 1`] = `"Đọc nhiều nhất"`;

exports[`Canonical Most Read Page I can see the list items 1`] = `"1Đại biểu QHVN muốn làm rõ vụ 9 người 'đi nhờ máy bay'Cập nhật gần nhất: 6 tháng 11 năm 2019"`;

exports[`Canonical Most Read Page I can see the list items 2`] = `"2Việt Nam ‘rà soát lỗ hổng’ vì ô tô có ‘đường lưỡi bò’Cập nhật gần nhất: 6 tháng 11 năm 2019"`;

exports[`Canonical Most Read Page I can see the list items 3`] = `"3Greentrees phản bác phóng sự 'Núp bóng môi trường' của VTVCập nhật gần nhất: 6 tháng 11 năm 2019"`;

exports[`Canonical Most Read Page I can see the list items 4`] = `"4Trump-Tập gặp ở Iowa gợi nhớ quan hệ tốt đẹp ngày xưaCập nhật gần nhất: 6 tháng 11 năm 2019"`;

exports[`Canonical Most Read Page I can see the list items 5`] = `"5Biểu tình và luật pháp: Cảnh sát Anh thua kiệnCập nhật gần nhất: 6 tháng 11 năm 2019"`;

exports[`Canonical Most Read Page I can see the list items 6`] = `"6Giải pháp cho cuộc chiến tài nguyên nước trên dòng MekongCập nhật gần nhất: 6 tháng 11 năm 2019"`;

exports[`Canonical Most Read Page I can see the list items 7`] = `"7Vụ 39 người chết ở Anh: Tranh cãi về trách nhiệmCập nhật gần nhất: 6 tháng 11 năm 2019"`;

exports[`Canonical Most Read Page I can see the list items 8`] = `"8Vụ 39 người chết: Nhiều người Việt tỏ ra 'lạnh lùng'Cập nhật gần nhất: 6 tháng 11 năm 2019"`;

exports[`Canonical Most Read Page I can see the list items 9`] = `"9HRW kêu gọi trả tự do cho nhà hoạt động Nguyễn Ngọc ÁnhCập nhật gần nhất: 6 tháng 11 năm 2019"`;

exports[`Canonical Most Read Page I can see the list items 10`] = `"10Lỗ hổng thiên đàng và một căn bệnh mãn tínhCập nhật gần nhất: 6 tháng 11 năm 2019"`;

exports[`Canonical Most Read Page SEO Apple Touch Icon should match attributes 1`] = `
Object {
  "sizes": null,
  "url": "http://localhost:7080/vietnamese/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Most Read Page SEO Apple Touch Icon should match attributes 2`] = `
Object {
  "sizes": "72x72",
  "url": "https://news.files.bbci.co.uk/include/articles/public/vietnamese/images/icons/icon-72x72.png",
}
`;

exports[`Canonical Most Read Page SEO Apple Touch Icon should match attributes 3`] = `
Object {
  "sizes": "96x96",
  "url": "https://news.files.bbci.co.uk/include/articles/public/vietnamese/images/icons/icon-96x96.png",
}
`;

exports[`Canonical Most Read Page SEO Apple Touch Icon should match attributes 4`] = `
Object {
  "sizes": "128x128",
  "url": "https://news.files.bbci.co.uk/include/articles/public/vietnamese/images/icons/icon-128x128.png",
}
`;

exports[`Canonical Most Read Page SEO Apple Touch Icon should match attributes 5`] = `
Object {
  "sizes": "144x144",
  "url": "https://news.files.bbci.co.uk/include/articles/public/vietnamese/images/icons/icon-144x144.png",
}
`;

exports[`Canonical Most Read Page SEO Apple Touch Icon should match attributes 6`] = `
Object {
  "sizes": "152x152",
  "url": "https://news.files.bbci.co.uk/include/articles/public/vietnamese/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Most Read Page SEO Apple Touch Icon should match attributes 7`] = `
Object {
  "sizes": "180x180",
  "url": "https://news.files.bbci.co.uk/include/articles/public/vietnamese/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Most Read Page SEO Apple Touch Icon should match attributes 8`] = `
Object {
  "sizes": "192x192",
  "url": "https://news.files.bbci.co.uk/include/articles/public/vietnamese/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Most Read Page SEO Apple Touch Icon should match attributes 9`] = `
Object {
  "sizes": "384x384",
  "url": "https://news.files.bbci.co.uk/include/articles/public/vietnamese/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Most Read Page SEO Apple Touch Icon should match attributes 10`] = `
Object {
  "sizes": "512x512",
  "url": "https://news.files.bbci.co.uk/include/articles/public/vietnamese/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Most Read Page SEO Canonical link 1`] = `"http://localhost:7080/vietnamese/popular/read"`;

exports[`Canonical Most Read Page SEO Dir attribute 1`] = `"ltr"`;

exports[`Canonical Most Read Page SEO FB admins 1`] = `"100004154058350"`;

exports[`Canonical Most Read Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Most Read Page SEO Heading level 1 1`] = `"Đọc nhiều nhất"`;

exports[`Canonical Most Read Page SEO Lang attribute 1`] = `"vi"`;

exports[`Canonical Most Read Page SEO Linked data should match text 1`] = `
Object {
  "@context": "http://schema.org",
  "@graph": Array [
    Object {
      "@type": "WebPage",
      "image": Object {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/vietnamese.png",
        "width": 1024,
      },
      "mainEntityOfPage": Object {
        "@id": "http://localhost:7080/vietnamese/popular/read",
        "@type": "WebPage",
        "name": "Đọc nhiều nhất",
      },
      "publisher": Object {
        "@type": "NewsMediaOrganization",
        "logo": Object {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/vietnamese.png",
          "width": 1024,
        },
        "name": "BBC News Tiếng Việt",
        "publishingPrinciples": "https://www.bbc.com/vietnamese/institutional-49283563",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/vietnamese.png",
      "url": "http://localhost:7080/vietnamese/popular/read",
    },
  ],
}
`;

exports[`Canonical Most Read Page SEO OG description 1`] = `"Đọc nhiều nhất - BBC News Tiếng Việt"`;

exports[`Canonical Most Read Page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/vietnamese.png"`;

exports[`Canonical Most Read Page SEO OG image alt 1`] = `"BBC News Tiếng Việt"`;

exports[`Canonical Most Read Page SEO OG locale 1`] = `"vi-VN"`;

exports[`Canonical Most Read Page SEO OG site name 1`] = `"BBC News Tiếng Việt"`;

exports[`Canonical Most Read Page SEO OG title 1`] = `"Đọc nhiều nhất - BBC News Tiếng Việt"`;

exports[`Canonical Most Read Page SEO OG type 1`] = `"website"`;

exports[`Canonical Most Read Page SEO OG url 1`] = `"http://localhost:7080/vietnamese/popular/read"`;

exports[`Canonical Most Read Page SEO Page title 1`] = `"Đọc nhiều nhất - BBC News Tiếng Việt"`;

exports[`Canonical Most Read Page SEO Robots meta tag 1`] = `"noodp,noydir"`;

exports[`Canonical Most Read Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Most Read Page SEO Twitter creator 1`] = `"@bbcvietnamese"`;

exports[`Canonical Most Read Page SEO Twitter description 1`] = `"Đọc nhiều nhất - BBC News Tiếng Việt"`;

exports[`Canonical Most Read Page SEO Twitter image alt 1`] = `"BBC News Tiếng Việt"`;

exports[`Canonical Most Read Page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/vietnamese.png"`;

exports[`Canonical Most Read Page SEO Twitter site 1`] = `"@bbcvietnamese"`;

exports[`Canonical Most Read Page SEO Twitter title 1`] = `"Đọc nhiều nhất - BBC News Tiếng Việt"`;
